// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled button as link renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <a
      aria-disabled="true"
      class="m-0 font-inherit leading-[1.5em] text-inherit font-inherit focus:outline-none hover:underline base-Button base- text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-default pointer-events no-underline rounded-sm shadow-none border-none text-white visited:text-white bg-gray min-w h-8 py-0 px-4"
      data-component-type="button"
      href="URL"
      role="button"
      tabindex="-1"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
      >
        Click me!
      </span>
    </a>
  </div>
</div>
`;

exports[`Button disabled button renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      aria-disabled="true"
      class="base-Button base- text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-default pointer-events no-underline rounded-sm shadow-none border-none text-white visited:text-white bg-gray min-w h-8 py-0 px-4"
      data-component-type="button"
      disabled=""
      role="button"
      tabindex="-1"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
      >
        Click me!
      </span>
    </button>
  </div>
</div>
`;
